--- a/Custom_binding/Custom_binding/Pages/Index.razor
+++ b/Custom_binding/Custom_binding/Pages/Index.razor
@@ -1,12 +1,11 @@
 ﻿@page "/"
-
 @using Custom_binding.Data
+@using Syncfusion.Blazor
 
-<SfGrid TValue="Order" ID="Grid" AllowGrouping="true" AllowSorting="true" AllowFiltering="true" AllowPaging="true" 
-    Toolbar="@(new List<string>() { "Add", "Edit", "Delete", "Update", "Cancel" })">
-    <SfDataManager AdaptorInstance="@typeof(GridCustomDataAdaptor)" Adaptor="Adaptors.CustomAdaptor"/>
-    <GridPageSettings PageSize="8"/>
-    <GridEditSettings AllowEditing="true" AllowDeleting="true" AllowAdding="true" AllowEditOnDblClick="true" Mode="@EditMode.Normal"/>
+<SfGrid TValue="Order" AllowFiltering="true" AllowSorting="true" AllowGrouping="true" AllowPaging="true" Toolbar="@ToolbarItems">
+    <SfDataManager AdaptorInstance="typeof(GridCustomDataAdaptor)" Adaptor="Adaptors.CustomAdaptor"/>
+    <GridEditSettings AllowEditing="true" AllowDeleting="true" AllowAdding="true" AllowEditOnDblClick="true" Mode="@EditMode.Normal" />
+    <GridPageSettings PageSize="10" />
     <GridAggregates>
         <GridAggregate>
             <GridAggregateColumns>
@@ -14,9 +13,9 @@
                     <FooterTemplate>
                         @{
                             var aggregate = (context as AggregateTemplateContext);
-                            <div>
-                                <p>Sum: @aggregate?.Sum</p>
-                            </div>
+                                <div>
+                                    <p>Sum: @aggregate?.Sum</p>
+                                </div>
                         }
                     </FooterTemplate>
                 </GridAggregateColumn>
@@ -28,9 +27,9 @@
                     <FooterTemplate>
                         @{
                             var aggregate = (context as AggregateTemplateContext);
-                            <div>
-                                <p>Average: @aggregate?.Average</p>
-                            </div>
+                                <div>
+                                    <p>Average: @aggregate?.Average</p>
+                                </div>
                         }
                     </FooterTemplate>
                 </GridAggregateColumn>
@@ -38,29 +37,33 @@
         </GridAggregate>
     </GridAggregates>
     <GridColumns>
-        <GridColumn Field=@nameof(Order.OrderID) HeaderText="Order ID" IsPrimaryKey="true" TextAlign="@TextAlign.Center" Width="140"/>
-        <GridColumn Field=@nameof(Order.CustomerID) HeaderText="Customer Name" Width="150"TextAlign="@TextAlign.Center"/>
-        <GridColumn Field=@nameof(Order.OrderDate) HeaderText=" Order Date" Format="d" Type="ColumnType.Date" TextAlign="TextAlign.Center" Width="130"/>
-        <GridColumn Field=@nameof(Order.Freight) HeaderText="Freight" Width="150" TextAlign="@TextAlign.Center"/>
+        <GridColumn Field="OrderID"
+                    HeaderText="Order ID"
+                    TextAlign="TextAlign.Center"
+                    IsPrimaryKey="true"
+                    Width="120">
+        </GridColumn>
+        <GridColumn Field="CustomerID"
+                    HeaderText="Customer Name"
+                    Width="150">
+        </GridColumn>
+        <GridColumn Field="OrderDate"
+                    HeaderText=" Order Date"
+                    EditType="EditType.DatePickerEdit"
+                    TextAlign="TextAlign.Center"
+                    Format="d"
+                    Type="ColumnType.Date"
+                    Width="130">
+        </GridColumn>
+        <GridColumn Field="Freight"
+                    HeaderText="Freight"
+                    Format="C2"
+                    TextAlign="TextAlign.Center"
+                    Width="120">
+        </GridColumn>
     </GridColumns>
 </SfGrid>
 
-@code {
-    public static List<Order>? Orders { get; set; }
-
-    protected override void OnInitialized() => Orders = Enumerable.Range(1, 75).Select(x => new Order()
-        {
-            OrderID = 1000 + x,
-            CustomerID = (new string[] { "ALFKI", "ANANTR", "ANTON", "BLONP", "BOLID" })[new Random().Next(5)],
-            Freight = 1.5 * x,
-            OrderDate = DateTime.Now.AddDays(x),
-        }).ToList();
-
-    public class Order
-    {
-        public int? OrderID { get; set; }
-        public string? CustomerID { get; set; }
-        public double? Freight { get; set; }
-        public DateTime? OrderDate { get; set; }
-    }
+@code{
+    public string[] ToolbarItems = new string[] { "Add", "Edit", "Delete", "Update", "Cancel" };
 }
