Sample(GH-3557): Custom binding sample in datagrid

--- a/Blazor_Server/Custom_binding/Pages/Index.razor
+++ b/Blazor_Server/Custom_binding/Pages/Index.razor
@@ -5,6 +5,7 @@
 <SfGrid TValue="Order" ID="Grid" AllowGrouping="true" AllowSorting="true" AllowFiltering="true" AllowPaging="true" 
     Toolbar="@(new List<string>() { "Add", "Edit", "Delete", "Update", "Cancel" })">
     <SfDataManager AdaptorInstance="@typeof(GridCustomDataAdaptor)" Adaptor="Adaptors.CustomAdaptor"/>
+    <GridFilterSettings Type="Syncfusion.Blazor.Grids.FilterType.Excel" />
     <GridPageSettings PageSize="8"/>
     <GridEditSettings AllowEditing="true" AllowDeleting="true" AllowAdding="true" AllowEditOnDblClick="true" Mode="@EditMode.Normal"/>
     <GridAggregates>
@@ -22,20 +23,6 @@
                 </GridAggregateColumn>
             </GridAggregateColumns>
         </GridAggregate>
-        <GridAggregate>
-            <GridAggregateColumns>
-                <GridAggregateColumn Field=@nameof(Order.Freight) Type="AggregateType.Average" Format="C2">
-                    <FooterTemplate>
-                        @{
-                            var aggregate = (context as AggregateTemplateContext);
-                            <div>
-                                <p>Average: @aggregate?.Average</p>
-                            </div>
-                        }
-                    </FooterTemplate>
-                </GridAggregateColumn>
-            </GridAggregateColumns>
-        </GridAggregate>
     </GridAggregates>
     <GridColumns>
         <GridColumn Field=@nameof(Order.OrderID) HeaderText="Order ID" IsPrimaryKey="true" TextAlign="@TextAlign.Center" Width="140"/>
@@ -44,4 +31,3 @@
         <GridColumn Field=@nameof(Order.Freight) HeaderText="Freight" Width="150" TextAlign="@TextAlign.Center"/>
     </GridColumns>
 </SfGrid>
-
