Sample(GH-3557): Provide grouping footer template in Custom binding sample

--- a/Blazor_WebAssembly/Grid_Custom_Binding/Pages/Index.razor
+++ b/Blazor_WebAssembly/Grid_Custom_Binding/Pages/Index.razor
@@ -18,6 +18,14 @@
                             </div>
                         }
                     </FooterTemplate>
+                    <GroupFooterTemplate>
+                        @{
+                            var aggregate = (context as AggregateTemplateContext);
+                            <div>
+                                <p>Sum: @aggregate?.Sum</p>
+                            </div>
+                        }
+                    </GroupFooterTemplate>
                 </GridAggregateColumn>
             </GridAggregateColumns>
         </GridAggregate>
