Sample(GH-3557): Custom binding sample in datagrid

--- a/Blazor_Server/Shared/MainLayout.razor
+++ b/Blazor_Server/Shared/MainLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
+<PageTitle>Custom_Binding_in_Blazor_DataGrid</PageTitle>
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
