--- a/Blazor_WebAssembly/Shared/MainLayout.razor
+++ b/Blazor_WebAssembly/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>Custom_binding</PageTitle>
+<PageTitle>Custom_Binding_in_Blazor_DataGrid</PageTitle>
 
 <div class="page">
     <div class="sidebar">
